<resources>
    <string name="app_name">BatApp</string>
    <string name="lblBienvenido">Bienvenid@ a la app de DC Cómics.</string>
    <string name="txtNombre">Nombre:</string>
    <string name="lblContrasenia">"Contraseña: "</string>
    <string name="lblUsuario">Usuario:</string>
    <string name="btnEntrar">Log In</string>
    <string name="title_activity_principal">principalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txtContrasenia" />
    <string name="txtUsuario" />
    <string name="MnuOpc3">Acerca de...</string>
    <string name="MnuOpc2">Perfil</string>
    <string name="MnuOpc1">Log Out</string>
    <string name="lblNom">"Nombre: "</string>
    <string name="txtNom">Bruce Wayne</string>
    <string name="lblAlias">Alias:</string>
    <string name="txtAlias">El Cruzado de la Capa</string>
    <string name="lblCiudad">Ciudad:</string>
    <string name="txtCiudad">Gotham City</string>
    <string name="lblFNac">Fecha de Nacimiento:</string>
    <string name="txtFNac">19/02/1940</string>
    <string name="tbtComics">Selección</string>
    <string name="tbtTop">Top 5</string>
    <string name="tbtVillanos">Villanos</string>
    <string name="lblBv">"Bienvenido, "</string>
    <string name="lblBruce">"Bruce Wayne. "</string>
</resources>
