<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:tabIndicatorColor="#112388"
        app:tabIndicatorHeight="5sp"
        app:tabSelectedTextColor="#112388"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:tabTextColor="@color/design_default_color_on_secondary"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tbtTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/top5copa"
            android:text="@string/tbtTop" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tbtComics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/fav"
            android:text="@string/tbtComics" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tbtVillanos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/persona"
            android:text="@string/tbtVillanos" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
