<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAC7CD"
    android:backgroundTint="#CAC7CD"
    android:foregroundTint="@android:color/background_light"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblBienvenido"
        android:textColor="#112388"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="237dp"
        android:layout_height="231dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/batman" />

    <TextView
        android:id="@+id/lblUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNombre"
        android:textColor="#112388"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lblContrasenia"
        app:layout_constraintEnd_toStartOf="@+id/txtUsuario"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.923" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="68dp"
        android:backgroundTint="#112388"
        android:ems="10"
        android:hint="Introducir usuario"
        android:inputType="@string/txtUsuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBienvenido"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="176dp"
        android:text="@string/lblContrasenia"
        android:textColor="#112388"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtContrasenia"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblBienvenido"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txtContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="68dp"
        android:backgroundTint="#112388"
        android:ems="10"
        android:hint="Introducir Contraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="156dp"
        android:layout_height="52dp"
        android:layout_marginTop="39dp"
        android:backgroundTint="#112388"
        android:onClick="oyente_btnLogIn"
        android:text="@string/btnEntrar"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContrasenia"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ivHelp"
        android:layout_width="38dp"
        android:layout_height="35dp"
        android:layout_marginTop="222dp"
        android:layout_marginBottom="52dp"
        android:onClick="oyente_ivHelp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBienvenido"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/help" />

</androidx.constraintlayout.widget.ConstraintLayout>